[package]
default-run = "runner"
edition = "2021"
name = "graphics"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beryllium = "0.7.6"
cgmath = { version = "0.18.0", features = [
    "mint",
    "rand",
    "unstable",
    "swizzle",
] }
glitz = "0.4.0"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
stb_image = "0.2.4"
zstring = { version = "0.1.3", features = ["alloc"] }

[dev-dependencies]
pretty_assertions = "1.2.0"
